--- a/style.css
+++ b/style.css
@@ -1,4 +1,84 @@
-form
+form:input
 {
+	padding: 5px;
+	width: 50px;
+}
+
+h1, h2, h3, h4
+{
+	font-family: Verdana, Geneva, "Trebuchet MS", sans-serif;
+	color: #707f7d;
+}
+
+
+
+#header
+{	
+	width: 100%;
+	height: 150px;
+	position: absolute;
+	margin: 0px;
+	top: 0px;
+	left: 0px;
+	background-color: #D9E39C;
 	
 }
+#header>h1
+{	
+	float:left;
+	margin-left: 30%;
+}
+.headerLogin
+{
+	float: right;
+	position: absolute;
+	height: 150px;
+	width:300px;
+	bottom: 0px;
+	right: 0px;
+	background-color: #B5BD82;
+}
+
+#headerButtons
+{
+	position: absolute;
+	bottom: 0px;
+	right: 15px;
+
+	margin:0px;
+}
+
+.bodycontent 
+{
+	position: absolute;
+	top: 150px;
+	margin-top: 0px;
+	 background-color: #909667;
+	 width: 75%;
+	 margin-left: 12%;
+	 margin-right: auto;
+	 	margin-top: 0px;
+	 padding-top: 0px;
+}
+
+#uploadDiv
+{
+	background-color: #DAFFD1;
+	margin-top: 10px;
+	padding-top: 15px;
+
+}
+
+ul
+{
+	list-style-type: none;
+	border: none;
+	padding: 5px;
+}
+
+li
+{
+
+}
+
+<!--purple = 7d7cff green = b2ff9c green/grey = 5E7F71 grey = 707f7d
